--- a/myhouselifting.in/css/style.css
+++ b/myhouselifting.in/css/style.css
@@ -269,3 +269,10 @@
     background: var(--primary);
     transform: skew(40deg);
 }
+
+
+
+.bg-hero {
+    background: linear-gradient(rgba(34, 36, 41, .8), rgba(34, 36, 41, .8)), url(../img/home3.jpg) top center no-repeat;
+    background-size: cover;
+}
